--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@babel/runtime": "^7.14.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
