--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
     "expo-font": "~9.1.0",
+    "expo-linear-gradient": "^9.1.0",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "mobx": "^6.3.2",
