--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "expo-camera": "^11.0.3",
     "expo-font": "~9.1.0",
     "expo-linear-gradient": "^9.1.0",
+    "expo-media-library": "^12.0.2",
+    "expo-permissions": "^12.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "mobx": "^6.3.2",
