--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-camera": "^3.44.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal-selector": "^2.0.3",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
